# observer_backend

./: alembic.ini  build.sh  formatting.sh  pyproject.toml  pytest.ini
.github/workflows/: flake8.yml  integration_tests.yml
app/: config.py  dao.py  database.py  dependencies.py  exc.py  main.py  queue.py
app/alembic/: env.py
app/service/: dao.py  model.py
tests/integrational_tests/: conftest.py  test_auth.py  test_misc.py
